# base-python

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
config/: config.py
