[tool.poetry]
name = "base-python"
version = "0.1.0"
description = ""
authors = ["Bregy Malpartida <bregy@minsky.cc>"]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
